Cannot disable MONGODB-X509 in enterprise build.

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.5.4
    • Affects Version/s: None
    • Component/s: Security
    • None
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      In the enterprise build, operators enumerate the list of enabled authentication mechanisms via --setParameter authenticationMechanisms=<comma-separated list of mech names>. Right now, MONGODB-X509 is not properly handled by this logic.

            Assignee:
            Andreas Nilsson (Inactive)
            Reporter:
            Andy Schwerin (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: